# cs6490-project

./: .gitignore  README.md  README.rst  paper.tex  pyproject.toml  slides.pptx
ccn_sim/: node.py  node_sim.py
ccn_sim/simulations/: sim1.py  util.py
ccn_sim/simulations/star/: build_network.py  simple_star_1.py
output/simple_test/: r-0.csv  r-1.csv
tests/: test_ccn_sim.py  test_node_sim.py
visualization/: visualize.py
