[tool.poetry]
name = "ccn-sim"
version = "0.1.0"
description = ""
authors = ["Leo Kell", "Jack Wilburn"]

[tool.poetry.dependencies]
python = "^3.9"
simpy = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
