[tool.poetry]
name = "ccn-sim"
version = "0.1.0"
description = ""
authors = ["Leo Kell", "Jack Wilburn"]

[tool.poetry.dependencies]
python = "^3.9"
simpy = "^4.0.1"
plotnine = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
